cmake_minimum_required(VERSION 3.13)
project(cop3014_lab06_function_b)

set(CMAKE_CXX_STANDARD 11)

add_executable(scope.exe scope.cpp)
add_executable(money.exe money.cpp)
add_executable(milesToKilo.exe milesToKilo.cpp)
add_executable(convertmoney.exe convertmoney.cpp)
add_executable(baseball.exe baseball.cpp)
